--- a/Public/Views/discografia.html
+++ b/Public/Views/discografia.html
@@ -43,20 +43,23 @@
         </nav>
     </header>
     <!-- Fin del Header -->
+    <!-- Inicio del Main -->
     <main class="main contenedor">
         <h2 data-aos="fade-right" data-aos-duration="1500" class="title__all">Discografía</h2>
         <section>
-            <article>
-                <p data-aos="fade-right" data-aos-duration="1500" class="row contenedor text__description">Escucha más de nuestra música.</p>
+            <article class="pt-5">
+                <p data-aos="fade-right" data-aos-duration="1500" class="row contenedor pb-5 text__description">Escucha más de nuestra música.</p>
             </article>
         </section>
-        <div class="row container-fluid">
+        <div class="row pt-5 container-fluid">
             <iframe class="col-lg-3 col-md-6 col-sm-6 p-1" style="border-radius:12px" src="https://open.spotify.com/embed/track/20S0GIQ9ZRyRzH58pBfmlf?utm_source=generator&theme=0" width="100%" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>    
             <iframe class="col-lg-3 col-md-6 col-sm-6 p-1" style="border-radius:12px" src="https://open.spotify.com/embed/track/0Ku9gIXPNNPuj5m2V6wclo?utm_source=generator" width="100%" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             <iframe class="col-lg-3 col-md-6 col-sm-6 p-1" style="border-radius:12px" src="https://open.spotify.com/embed/album/4eMUaO2bcyXomIyOyUDNOA?utm_source=generator" width="100%" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             <iframe class="col-lg-3 col-md-6 col-sm-6 p-1" style="border-radius:12px" src="https://open.spotify.com/embed/album/7wvlp0V3WM98UOGFb2J17n?utm_source=generator" width="100%" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </div>
     </main>
+    <!-- Final del Main -->
+    <!-- Inicio del Footer -->
     <footer>
         <picture class="pieDePagina flex-row contenedor">
             <a class="pieDePagina__link contenedor" href="https://www.instagram.com/entreperros_/" target="_blank">
@@ -74,6 +77,7 @@
         </picture>
         <p class="pieDePagina__derechos contenedor">Todos los derechos reservados </p>
     </footer>
+    <!-- Final del Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
