--- a/Public/Views/galeria.html
+++ b/Public/Views/galeria.html
@@ -43,10 +43,11 @@
         </nav>
     </header>
     <!-- Fin del Header -->
+    <!-- Inicio del Main -->
     <main class="main contenedor">
         <h2 data-aos="fade-right" data-aos-duration="1500" class="title__all">Galería</h2>
-        <section class="row">
-            <div id="carouselExampleControls" class="mx-auto carousel d-block slide col-lg-6 col-md-8 col-sm-12" data-bs-ride="carousel">
+        <section class="row contenedor justify-content-center pt-5">
+            <div id="carouselExampleControls" class=" carousel d-block align-items-center col-lg-10 slide " data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="../img/Banda (1).jpg" class="d-block w-100 " alt="Imagen de la banda tocando">
@@ -79,8 +80,10 @@
             </div>
         </section>
     </main>
+    <!-- Final del Main -->
+    <!-- Inicio del Footer -->
     <footer>
-        <picture id="flex-row" class="pieDePagina flex-row contenedor">
+        <picture id="flex-row" class="pieDePagina flex-row contenedor ">
             <a class="pieDePagina__link contenedor" href="https://www.instagram.com/entreperros_/" target="_blank">
                 <img class="pieDePagina__image contenedor zoom__redes" src="../img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
             </a>
@@ -96,6 +99,7 @@
         </picture>
         <p class="pieDePagina__derechos contenedor">Todos los derechos reservados </p>
     </footer>
+    <!-- Final del Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
