--- a/Public/Views/tour.html
+++ b/Public/Views/tour.html
@@ -43,36 +43,37 @@
         </nav>
     </header>
     <!-- Fin del Header -->
+    <!-- Inicio del Main -->
     <main class="main contenedor">
-        <h2 data-aos="fade-right" data-aos-duration="1500" class="contenedor title__all">Tour</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500" class="contenedor title">Tour</h2>
         <section>
-            <article>
-                <p data-aos="fade-right" data-aos-duration="1500" id="text__responsive" class="row contenedor text__description">Conocé nuestro Tour</p>
-            </article>
+            <article class="pb-5">
+                <p data-aos="fade-right" data-aos-duration="1500" id="text__responsive" class="row contenedor pt-5 text__description">Conocé nuestro Tour</p>
+            </article>  
         </section>
-        <section data-aos="fade-right" data-aos-duration="1500" class="row text__tour">
-            <div class="bg-light border-bottom border-dark p-3 text-center">
-                <ul class="row contenedor ">    
+        <section data-aos="fade-right" data-aos-duration="1500" class="row contenedor pt-5 text__tour">
+            <div class="bg-light border-bottom border-dark p-4 text-center">
+                <ul class="row contenedor">    
                     <li class="col-4">LUGAR</li>
                     <li class="col-4">FECHA</li>
                     <li class="col-4">COMPRAR</li>
                 </ul>
             </div>
-            <div class="bg-light border-bottom border-dark p-3 text-center">
+            <div class="bg-light border-bottom border-dark p-4 text-center">
                 <ul class="row contenedor">    
                     <li class="col-4">Club Lucille</li>
                     <li class="col-4">28/05</li>
                     <li class="col-4 caja__texto zoom"><a class="col-4 comprar2 comprar__tickets show" href="https://livepass.com.ar" target="_blank">Comprar</a></li>   
                 </ul>
             </div>
-            <div class="bg-light border-bottom border-dark p-3 text-center">
+            <div class="bg-light border-bottom border-dark p-4 text-center">
                 <ul class="row contenedor">
                     <li class="col-4">The Roxy</li>
                     <li class="col-4">30/07</li>                  
                     <li class="col-4 caja__texto zoom"><a class="col-4 comprar3 comprar__tickets show" href="https://livepass.com.ar" target="_blank">Comprar</a></li>
                 </ul>
             </div>
-            <div class="bg-light border-bottom border-dark p-3 text-center">
+            <div class="bg-light border-bottom border-dark p-4 text-center">
                 <ul class="row contenedor">
                     <li class="col-4">La Trastienda</li>
                     <li class="col-4">10/10</li>
@@ -81,6 +82,8 @@
             </div>
         </section>
     </main>
+    <!-- Final del Main -->
+    <!-- Inicio del Footer-->
     <footer>
         <picture id="flex-row" class="pieDePagina  contenedor">
             <a class="pieDePagina__link contenedor" href="https://www.instagram.com/entreperros_/" target="_blank">
@@ -98,6 +101,7 @@
         </picture>
         <p class="pieDePagina__derechos contenedor">Todos los derechos reservados </p>
     </footer>
+    <!-- Final del Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
