--- a/Public/Views/contacto.html
+++ b/Public/Views/contacto.html
@@ -43,34 +43,39 @@
         </nav>
     </header>
     <!-- Final del Header -->
+    <!-- Inicio del Main -->
     <main class="main contenedor">
-        <h2 data-aos="fade-right" data-aos-duration="1500" class="title__all">Contacto</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500" class="title__all pb-5 ">Contacto</h2>
         <section>
             <article>
-                <p data-aos="fade-right" data-aos-duration="1500" id="text__responsive" class="contenedor text__description">Dejanos tu mensaje, nos comunicaremos a la brevedad.</p>
+                <p data-aos="fade-right" data-aos-duration="1500" id="text__responsive" class="contenedor text__description pb-5">Dejanos tu mensaje, nos comunicaremos a la brevedad.</p>
             </article>
         </section>
-        <form class="form p-6 row contenedor col-lg-6 bg-light bg-gradient rounded justify-content-center">
-            <div class="m-1 p-2 col-lg-6">
-                <label for="formGroupExampleInput" class="form-label">Tu nombre </label>
-                <input type="text" class="input-lg form-control" id="formGroupExampleInput" placeholder="Tu nombre">
-            </div>
-            <div class="m-1 p-2 col-lg-6">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-                <div>
-                  <input type="email" class="input-lg form-control" id="inputEmail3" placeholder="Tu Email">
+        <form class="p-6 row align-items-center mx-auto form col-lg-6 pt-6 contenedor ">
+            <div>
+                <div class="m-1 p-2 ">
+                    <label for="formGroupExampleInput" class="form-label">Tu nombre </label>
+                    <input type="text" class="input-lg form-control" id="formGroupExampleInput" placeholder="Tu nombre">
                 </div>
-            </div>
-            <div class="m-1 p-2 col-lg-6 justify-content-center">
-                <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu mensaje</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
-            <div class="col-lg-6 p-6 justify-content-center">
-                <input class="p-6 btn btn-primary m-1 input-lg " type="submit" value="Enviar">
-                <input class="p-6 btn btn-primary m-1 input-lg" type="reset" value="Limpiar formulario">
+                <div class="m-1 p-2 ">
+                    <label for="inputEmail3" class=" col-form-label">Email</label>
+                    <div>
+                    <input type="email" class="input-lg form-control" id="inputEmail3" placeholder="Tu Email">
+                    </div>
+                </div>
+                <div class="m-1 p-2 ">
+                    <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu mensaje</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="7"></textarea>
+                </div>
+                <div class="m-1 p-1 ">
+                    <input class="p-6 btn btn-primary m-1 input-lg " type="submit" value="Enviar">
+                    <input class="p-6 btn btn-primary m-1 input-lg" type="reset" value="Limpiar formulario">
+                </div>
             </div>
         </form>
     </main>
+    <!-- Final del Main -->
+    <!-- Inicio del Footer-->
     <footer>
         <picture id="flex-row" class="pieDePagina flex-row contenedor">
             <a class="pieDePagina__link contenedor" href="https://www.instagram.com/entreperros_/" target="_blank">
@@ -88,6 +93,7 @@
         </picture>
         <p class="pieDePagina__derechos contenedor">Todos los derechos reservados </p>
     </footer>
+    <!-- Final del Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
