--- a/sass/views/_tour.scss
+++ b/sass/views/_tour.scss
@@ -4,13 +4,12 @@ main {
     font-family: $font-primary;
     min-height: 80vh;
     
-     
+    
+      
     .title__all {
         text-transform: uppercase;
         font-weight: 900;
         font-size: 62px;
-       
-     
         
     }
     article {
@@ -19,16 +18,26 @@ main {
             font-size: $text-md;
             text-align: left;
             align-items: center;
-            line-height: 3rem; 
+            line-height: 2.9rem; 
         }
     }
     
     
-    .text__tour {
-        font-size: $text-md;
-        @include flex-row;
-        align-items: center;
+       
+
+    section{
+    
+        .text__tour {
+            font-size: $text-lg;
+            padding-top: 10rem;
+        
+        }   
     }
+   
+        
+     
+        
+
     
     .caja__texto {
         background-color:$secondary;
@@ -36,7 +45,7 @@ main {
     }
 
     ul li {
-
+        font-size: map-get($text-sizes , lg );
         list-style-type: none;
             
     }
@@ -46,7 +55,7 @@ main {
             background-color:$secondary;
             color: $principal;
             border-radius: 0.6em;
-            width: 100%;
+            width: 90%;
             text-align: center;
         }
         
@@ -55,7 +64,7 @@ main {
             background-color:$secondary;
             color: $principal;
             border-radius: 0.6em;
-            width: 100%;
+            width: 90%;
             text-align: center;
         }
         .comprar4 {
@@ -63,7 +72,7 @@ main {
             background-color:$secondary;
             color: $principal;
             border-radius: 0.6em;
-            width: 100%;
+            width: 90%;
             text-align: center;
         }
     }
@@ -86,6 +95,14 @@ main {
         #text__responsive {
             
             text-align: center;
+        }
+        section{
+    
+            .text__tour {
+                font-size: $text-sm;
+                
+            
+            }   
         }
     }
         .menu {
