Entrega Proyecto Final v2

--- a/Public/Views/galeria.html
+++ b/Public/Views/galeria.html
@@ -50,22 +50,22 @@
             <div id="carouselExampleControls" class=" carousel d-block align-items-center col-lg-10 slide " data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../img/Banda (1).jpg" class="d-block w-100 " alt="Imagen de la banda tocando">
+                    <img src="../img/guitarrista_entre_perros.jpg" class="d-block w-100 " alt="Imagen de la banda tocando">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/Banda (10).jpg" class="d-block w-100 " alt="Imagen de la banda con publico de fondo y hmo">
+                    <img src="../img/entre_perros_tocando.jpg" class="d-block w-100 " alt="Imagen de la banda con publico de fondo y hmo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/Banda (12).jpg" class="d-block w-100 " alt="Imagen de la banda con publico de fondo.">
+                    <img src="../img/entre_perros_tocando_publico.jpg" class="d-block w-100 " alt="Imagen de la banda con publico de fondo.">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/Banda (2).jpg" class="d-block w-100 " alt="Imagen de una camara filmando a la banda">
+                    <img src="../img/foto_entre_perros.jpg" class="d-block w-100 " alt="Imagen de una camara filmando a la banda">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/Banda (3).jpg" class="d-block w-100 " alt="Imagen de la banda tocando con la pantalla de fondo">
+                    <img src="../img/entre_perros_pantalla.jpg" class="d-block w-100 " alt="Imagen de la banda tocando con la pantalla de fondo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/Banda (5).jpg" class="d-block w-100 " alt="Imagen de la banda en el escenario con publico de fondo">
+                    <img src="../img/entre_perros_humo.jpg" class="d-block w-100 " alt="Imagen de la banda en el escenario con publico de fondo">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
