--- a/Public/Views/contacto.html
+++ b/Public/Views/contacto.html
@@ -48,7 +48,7 @@
         <h2 data-aos="fade-right" data-aos-duration="1500" class="title__all pb-5 ">Contacto</h2>
         <section>
             <article>
-                <p data-aos="fade-right" data-aos-duration="1500" id="text__responsive" class="contenedor text__description pb-5">Dejanos tu mensaje, nos comunicaremos a la brevedad.</p>
+                <p data-aos="fade-right" data-aos-duration="1500" class="contenedor text__description pb-5">Dejanos tu mensaje, nos comunicaremos a la brevedad.</p>
             </article>
         </section>
         <form class="p-6 row align-items-center mx-auto form col-lg-6 pt-6 contenedor ">
