--- a/Public/Views/tour.html
+++ b/Public/Views/tour.html
@@ -48,7 +48,7 @@
         <h2 data-aos="fade-right" data-aos-duration="1500" class="contenedor title">Tour</h2>
         <section>
             <article class="pb-5">
-                <p data-aos="fade-right" data-aos-duration="1500" id="text__responsive" class="row contenedor pt-5 text__description">Conocé nuestro Tour</p>
+                <p data-aos="fade-right" data-aos-duration="1500"  class=" contenedor pt-5  text__description">Conocé nuestro Tour</p>
             </article>  
         </section>
         <section data-aos="fade-right" data-aos-duration="1500" class="row contenedor pt-5 text__tour">
