--- a/css/main.css
+++ b/css/main.css
@@ -138,22 +138,20 @@ main {
     font-size: 3em; }
   main section {
     padding-top: 1em;
-    display: flex; }
+    display: flex;
+    justify-content: center; }
     main section div .iframe__video {
       display: flex;
       flex-direction: column;
       align-self: center;
       padding-left: 0rem; }
-  main #text__responsive {
-    text-align: center; }
   .menu {
     font-size: .8em;
     flex-basis: 30%; }
   .column-responsive {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center; } }
+    align-items: center; } }
 
 @media screen and (max-width: 480px) {
   nav .logo {
@@ -235,15 +233,12 @@ main {
 /* Responsive */
 @media screen and (max-width: 720px) {
   main .title {
-    text-align: center;
     font-size: 3em; }
   main .title__all {
-    font-size: 4em;
-    text-align: center; }
-  main #text__responsive {
-    text-align: center; }
+    font-size: 4em; }
   main section .text__tour {
-    font-size: 0.5em; }
+    font-size: 0.5em;
+    text-align: center; }
   .menu {
     font-size: .8em;
     flex-basis: 30%; }
@@ -261,18 +256,11 @@ main {
   nav .menu {
     font-size: 0.7em; }
   main .title {
-    font-size: 2.5em;
-    text-align: center; }
+    font-size: 2.5em; }
   main .title__all {
-    font-size: 2em;
-    text-align: center; }
-  main .text__description {
-    font-size: 0.5em;
-    line-height: 1.5em; }
+    font-size: 2em; }
   .menu {
     font-size: 0.7em; }
-  #text__responsive {
-    text-align: justify; }
   .column-responsive {
     display: flex;
     flex-direction: column;
@@ -301,8 +289,6 @@ main {
   main .title {
     text-align: center;
     font-size: 3em; }
-  main #text__responsive {
-    text-align: center; }
   .menu {
     font-size: .8em;
     flex-basis: 30%; }
@@ -311,7 +297,8 @@ main {
     flex-direction: column;
     padding: 1em;
     align-items: center;
-    justify-content: center; } }
+    justify-content: center;
+    align-items: center; } }
 
 @media screen and (max-width: 480px) {
   nav .logo {
@@ -330,8 +317,6 @@ main {
     line-height: 1.5em; }
   .menu {
     font-size: 0.7em; }
-  #text__responsive {
-    text-align: justify; }
   .column-responsive {
     display: flex;
     flex-direction: column;
@@ -353,6 +338,9 @@ main {
 main {
   font-family: "Roboto", sans-serif;
   min-height: 80vh; }
+  main section {
+    padding-top: 1em;
+    display: flex; }
   main .title__all {
     text-transform: uppercase;
     font-weight: 900; }
@@ -364,11 +352,21 @@ main {
       line-height: 3rem; }
     main form .input-lg {
       line-height: 3rem; }
-  main .btn-primary {
-    color: white;
-    background-color: black;
-    border-color: black; }
-  main .btn-primary:hover {
-    color: white;
-    background-color: #525252;
-    border-color: black; }
+    main form .btn-primary {
+      color: white;
+      background-color: black;
+      border-color: black; }
+    main form .btn-primary:hover {
+      color: white;
+      background-color: #525252;
+      border-color: black; }
+
+/* Responsive */
+@media screen and (max-width: 720px) {
+  main .title {
+    text-align: center;
+    font-size: 3em; }
+  main section {
+    padding-top: 1em;
+    display: flex;
+    justify-content: center; } }
