--- a/sass/views/_contacto.scss
+++ b/sass/views/_contacto.scss
@@ -3,7 +3,11 @@
 main {
     font-family: $font-primary;
     min-height: 80vh;
-           
+    
+    section {
+        padding-top: 1em;
+        @include flex-row;
+    }
     .title__all {
         text-transform: uppercase;
         font-weight: 900;  
@@ -18,33 +22,6 @@ main {
         .input-lg {
             line-height: 3rem;
         }
-    }
-
-    // form {
-    //     display: flex;
-    //     flex-direction: column;
-    //     align-items: center;
-    //     div{
-
-    //         background-color: $third;
-    //     }
-        // display: grid;
-        // grid-template-columns: .5fr;
-        // grid-template-rows: 1fr 1fr 1fr .5fr ;
-        // grid-template-areas: 
-        // "Nombre"
-        // "Email"
-        // "Mensaje"
-        // "Botones";
-        // align-self: center;
-        // align-items: center;
-        // justify-content: center;
-        // line-height: 4rem;
-        // font-size: map-get($text-sizes, md );
-        // padding: 7rem;
-        // background-color: $third;
-        // border-radius: 3rem;
-        
         .btn-primary {
             color: $principal;
             background-color: $secondary;
@@ -59,6 +36,25 @@ main {
         }
     }
 
+}
+
+/* Responsive */
+
+@media screen and  (max-width: 720px) {
+    
+
+    main {    
+        .title {   
+            text-align: center;
+            font-size: map-get($text-sizes , xlg );
+            }
+        section {
+            padding-top: 1em;
+            @include flex-row;
+            justify-content: center;
+        }
+    }
+}
 
 
 
